REGRESSION (Safari 12): Download of Blob URL fails https://bugs.webkit.org/show_bug.cgi?id=190351 <rdar://problem/45091181>

Reviewed by Geoffrey Garen.

Source/WebCore:

When using both the download attribute and target="_blank" on an anchor element, we would
mistakenly drop the download attribute after the "new window" policy decision has been made.
As a result, we would try to load the blob instead of downloading it.

Test: fast/dom/HTMLAnchorElement/anchor-file-blob-download-blank-target.html

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::continueLoadAfterNewWindowPolicy):

LayoutTests:

Add layout test coverage.

* fast/dom/HTMLAnchorElement/anchor-file-blob-download-blank-target-expected.txt: Added.
* fast/dom/HTMLAnchorElement/anchor-file-blob-download-blank-target.html: Added.


Canonical link: https://commits.webkit.org/205353@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236970 268f45cc-cd09-0410-ab3c-d52691b4dbfc